update readme and add hashbang to cron.py

--- a/readme
+++ b/readme
@@ -1,3 +1,13 @@
-pip install -U git+https://github.com/neomatrix369/nlp_profiler.git@master
+to install run:
+
+pip install django
 
 pip install django-pandas
+
+pip install -U git+https://github.com/neomatrix369/nlp_profiler.git@master
+
+
+then configure the database if you want.
+
+then add the following cron line with crontab -e:
+0 0 * * * /path/to/cron.py
